<resources>
    <string name="app_name">DigitalLibraryApp</string>
    <string name="title_activity_navigation_draw">PICT Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PICT Library</string>
    <string name="nav_header_subtitle">sample@pict.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_books">View Books</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_fine">Fine</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>

</resources>
