<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_books"
            android:title="View Books" />
        <item
            android:id="@+id/nav_fine"
            android:title="@string/menu_fine" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_demand_slip"
            android:title="Demand Slip" />
        <item
            android:id="@+id/nav_request_book"
            android:title="Request Book" />
        <item
            android:id="@+id/nav_logout"
            android:title="LOGOUT" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
